[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.2.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { version = "0.1.41" }
serde = "1.0"
nomt = { git = "https://github.com/thrumdev/nomt.git", rev = "834bc4f114bfc4ba0372a92bed75f02b9cdb2e76", default-features = false, features = ["sha2-hasher", "serde"] }