[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.2.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { version = "0.1.41" }
serde = "1.0"
nomt = { git = "https://github.com/thrumdev/nomt.git", rev = "4ba251f1e7b982b312f5c2b570f3f03f4bbb11ea", default-features = false, features = ["sha2-hasher", "serde"] }
sha2 = { version = "0.10.8" }
anyhow = { version = "1.0.98" }
hex = { version = "0.4.3" }