[package]
name = "sov_nomt_risc0"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2.0", default-features = false, features = ['std'] }
nomt-core = { git = "https://github.com/thrumdev/nomt.git", rev = "834bc4f114bfc4ba0372a92bed75f02b9cdb2e76", default-features = false, features = ["sha2-hasher", "serde"] }
