[package]
name = "sov_nomt_risc0"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2.0", default-features = false, features = ['std'] }
nomt-core = { git = "https://github.com/thrumdev/nomt.git", rev = "4ba251f1e7b982b312f5c2b570f3f03f4bbb11ea", default-features = false, features = ["sha2-hasher", "serde"] }
sha2 = { version = "0.10.8" }
hex = { version = "0.4.2", default-features = false }